<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/lbOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:text="@string/old_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.app.yun.view.ClearEditText
        android:id="@+id/txtOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/input_login_password"
        android:inputType="textPassword"
        android:maxLength="@integer/password_maxlength"
        app:layout_constraintLeft_toRightOf="@+id/lbOldPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/new_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/lbOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/lbOldPassword" />

    <com.app.yun.view.ClearEditText
        android:id="@+id/txtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/num_alpha_underline_1_10"
        android:inputType="textPassword"
        android:maxLength="@integer/password_maxlength"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtOldPassword" />

    <TextView
        android:id="@+id/lbEnsureNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/ensure_new_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/lbNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/lbNewPassword" />

    <com.app.yun.view.ClearEditText
        android:id="@+id/txtEnsureNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/second_input_password_tip"
        android:inputType="textPassword"
        android:maxLength="@integer/password_maxlength"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/txtNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtNewPassword" />


    <Button
        android:id="@+id/btnEnsureModification"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@color/commonBlueColor"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="@+id/lbEnsureNewPassword"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtEnsureNewPassword" />

    <Button
        android:id="@+id/btnCancelModification"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="36dp"
        android:background="@color/commonBlueColor"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="@+id/txtEnsureNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtEnsureNewPassword" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>